--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
     "next": "16.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1"
